--- a/function/package.json
+++ b/function/package.json
@@ -1,13 +1,13 @@
 {
   "name": "movie-recommendation-system",
   "version": "1.0.0",
-  "description": "A movie recommendation system",
+  "description": "A movie recommendation system model.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
-  "author": "Your Name",
-  "license": "MIT",
+  "author": "Manas Parashar",
+  "license": "Open",
   "dependencies": {
     "express": "^4.17.1",
     "axios": "^0.21.1",
